force-app/main/default/objects/Employee_Assignment__c/fields/Base_Category__c.field-meta.xml
<CustomField>
    <fullName>Base_Category__c</fullName>
    <label>Base Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>