force-app/main/default/objects/Employee_Assignment__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employee Assignments</relationshipLabel>
    <relationshipName>Employee_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>