force-app/main/default/objects/Employee_Assignment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Employee Assignments</relationshipLabel>
    <relationshipName>Employee_Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>