force-app/main/default/objects/Employee_Assignment__c/fields/Sub_Project__c.field-meta.xml
<CustomField>
    <fullName>Sub_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Project</label>
    <referenceTo>Sub_Project__c</referenceTo>
    <relationshipLabel>Employee Assignments</relationshipLabel>
    <relationshipName>Employee_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>