force-app/main/default/objects/Employee_Assignment__c/recordTypes/WO.recordType-meta.xml
<RecordType>
    <fullName>WO</fullName>
    <active>true</active>
    <label>WO</label>
</RecordType>